--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Sen&display=swap');
+
 html, body{
     height: 100%;
     max-width: 100%;
     background: rgb(75,192,200);
     background: linear-gradient(90deg, rgba(75,192,200,1) 0%, rgba(199,121,208,1) 50%, rgba(254,172,94,1) 100%);
-    overflow : hidden;
-}
-
-
-.AppContainer{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5vh;
-    width: 55vw;
-    height: 70vh;
-    background: rgba(255, 255, 255, 0.363);
-    mix-blend-mode: normal;
-    backdrop-filter: blur(40px);
-    border-radius: 20px;
+    overflow : hidden;   
+    font-family: 'Sen', sans-serif;
+    color: rgba(255, 255, 255, 0.897);
 }
 
 .SearchContainer{
@@ -26,10 +16,51 @@ html, body{
     margin-right: auto;
     height: 5vh;
     width:30vw;
-    background: rgba(255, 255, 255, 0.363);
-    mix-blend-mode: normal;
-    backdrop-filter: blur(40px);
-    border-radius: 20px;
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 5.5px );
+    -webkit-backdrop-filter: blur( 5.5px );
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.103);
+}
+
+p{
+    text-align: center;
+}
+
+input{
+    background: none;
+    margin: auto;
+    width: 80%;
+    height: 50%;
+    border:none;
+    padding: 11px;
+    padding-left: 25px;
+    color: rgba(255, 255, 255, 0.897);
+    font-family: 'Sen', sans-serif;
+    font-size: 1.1rem;
+}
+
+.AppContainer{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5vh;
+    width: 50vw;
+    height: 65vh;
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 5.5px );
+    -webkit-backdrop-filter: blur( 5.5px );
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.103);
+
+    text-align: center;
+}
+
+.CityName{
+    font-size: 7.5rem;
+    margin:25px;
 }
 
 
