--- a/src/App.css
+++ b/src/App.css
@@ -65,50 +65,48 @@ html, body{
 
 /*APP*/
 /*Search Bar*/
-.SearchContainer{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 5vh;
-    width:30vw;
+
+.ErrorText{
+    text-align: center;
+}
+
+#location-name{
+    padding: 10px;
+    width:25vw;
     background: rgba( 255, 255, 255, 0.25 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 5.5px );
     -webkit-backdrop-filter: blur( 5.5px );
     border-radius: 10px;
     border: 1px solid rgba(0, 0, 0, 0.103);
-}
-
-.ErrorText{
-    text-align: center;
-}
-
-input{
-    background: none;
-    width: 80%;
-    height: 50%;
-    border:none;
     padding-left: 25px;
-    margin-bottom: 250px;
     color: rgba(255, 255, 255, 0.897);
     font-family: 'Sen', sans-serif;
     font-size: 1.1rem;
-    display: inline-flex;
-    margin: 0 auto;
+    float: inline-start;
 }
 
-button{
-    border: 0;
-    background: transparent;
+.TextBtn{
+    font-family: 'Sen', sans-serif;
+    color: rgba(255, 255, 255, 0.897);
+    text-align: center;
+    font-weight: bold;
 }
 
-button:hover{
+.Submit{
+    float:left;
+    padding: 13.5px;
+    margin-left: 12px;
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 5.5px );
+    -webkit-backdrop-filter: blur( 5.5px );
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.103);
     cursor: pointer;
 }
 
-.SearchIcon{
-    
-}
+
 
 
 /*Weather part*/
